# RoboVac_Assistant

./: .env  .gitignore  app.py  langchains.ipynb  md5.txt  pyproject.toml
Utils/: __init__.py  config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_loader.py
agent/: __init__.py  react_agent.py
agent/tools/: agent_tools.py  middleware.py
config/: chroma.yml  prompts.yml
model/: __init__.py  factory.py
rag/: __init__.py  rag_service.py  vector_store.py
rag/chroma_db/: chroma.sqlite3
