[project]
name = "RoboVac Assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "dashscope>=1.25.12",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-openai>=1.1.6",
    "pypdf>=6.7.1",
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
]
